--- a/style.css
+++ b/style.css
@@ -99,4 +99,47 @@ width: 426px;
 .develop-area h1{
     font-size: 45px;
 }
-
+.three-man{
+    display: flex;
+}
+.content-div h1{
+    font-size: 45px;
+}
+.image-div img{
+    width: 50%;
+}
+.Corona h1{
+    justify-content: center;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+}
+#person img{
+    width: 100%;
+}
+#three-person{
+    align-items: center;
+}
+.last-section .image img{
+    width: 100%;
+}
+footer{
+    padding: 0;
+    margin: 0;
+    background-color: #1A1A2E;
+    flex-direction: column;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.red-color{
+    color: #ff595986;
+}
+footer h1{
+    color: white;
+    font-family: "Lobster Two";
+font-size: 35px;
+}
+footer span{
+    color: white;
+}
